--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "del": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.0.0",
+    "gulp-minify": "^3.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
@@ -28,13 +30,16 @@
     "gulp-svgmin": "^2.2.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-twig": "^1.2.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-webpack": "^1.5.0",
     "gulp.spritesmith": "^6.10.1",
+    "jquery-bridget": "^2.0.1",
     "webpack": "^4.36.1"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
+    "gsap": "^2.1.3",
+    "infinite-scroll": "^3.0.6",
     "jquery": "^3.4.1",
-    "gsap": "^2.1.3"
+    "normalize.css": "^8.0.1"
   }
 }
